--- a/TheBeast/app/src/main/res/layout/login_to_facebook.xml
+++ b/TheBeast/app/src/main/res/layout/login_to_facebook.xml
@@ -24,6 +24,14 @@
     <FrameLayout
         android:id="@+id/f_login_to_fb"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+    </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout >
