--- a/TheBeast/app/src/main/res/layout/tab_layout.xml
+++ b/TheBeast/app/src/main/res/layout/tab_layout.xml
@@ -15,8 +15,26 @@
         app:tabIndicatorColor="@color/colorAccent"
         app:tabGravity="fill"
         app:tabMode="scrollable"/>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:src="@drawable/ic_add_white_24dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:layout_marginRight="@dimen/fab_margin"/>
+    </RelativeLayout>
+
 </LinearLayout>
