--- a/TheBeast/app/src/main/res/layout/activity_user_profile_layout.xml
+++ b/TheBeast/app/src/main/res/layout/activity_user_profile_layout.xml
@@ -2,6 +2,7 @@
 
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/coordinator"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
